--- a/src/app/sistema/components/operaciones/operaciones.component.html
+++ b/src/app/sistema/components/operaciones/operaciones.component.html
@@ -152,7 +152,7 @@
     [maximizable]="true" [closeOnEscape]="ingreso.id != ''">
 
     <!-- HEADERS -->
-    <div class="row py-2" style="background-color: rgba(74, 142, 243, 0.397); border-radius: 6px;">
+    <div class="row py-2 bg-secondary" style="border-radius: 6px;">
         <div class="col-6 col-md-3 mb-2 mb-md-0">
             <div class="input-group">
                 <span class="input-group-text" id="basic-addon1">Modelo</span>
