--- a/src/app/sistema/components/operaciones/operaciones.component.html
+++ b/src/app/sistema/components/operaciones/operaciones.component.html
@@ -6,9 +6,9 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-5">
-            <button type="button" class="btn btn-secondary m-2" (click)="mostrarModalIngreso()"><i
+            <button type="button" class="btn btn-secondary m-2 disabled" (click)="mostrarModalIngreso()"><i
                     class="pi pi-plus me-2"></i> NUEVA OPERACION</button>
-            <button type="button" class="btn btn-secondary m-2" (click)="mostrarModalFiltro()">FILTROS</button>
+            <button type="button" class="btn btn-secondary m-2 disabled" (click)="mostrarModalFiltro()">FILTROS</button>
         </div>
         <div class="col-12 col-md-7 text-md-end">
             <button type="button" class="btn btn-secondary m-2 disabled" (click)="listadoXLSX()"><i
