--- a/src/app/sistema/components/stock-por-clientes/stock-por-clientes.component.html
+++ b/src/app/sistema/components/stock-por-clientes/stock-por-clientes.component.html
@@ -48,10 +48,10 @@
                     <tr>
                         <th class="text-center align-middle" scope="col">PRODUCTO</th>
                         <th class="text-center align-middle" scope="col">U.M.</th>
-                        <th class="text-center align-middle" scope="col">INGRESOS</th>
-                        <th class="text-center align-middle" scope="col">SALIDAS</th>
+                        <th class="text-center align-middle" scope="col" title="INGRESOS de {{dataCliente.cliente}}, descontando DEVOLUCIONES de INGRESO">INGRESOS</th>
+                        <th class="text-center align-middle" scope="col" title="REMITOS a nombre de {{dataCliente.cliente}}, (incluye otros dueños). Descontando las DEVOLUCIONES de REMITOS">SALIDAS</th>
                         <th class="text-center align-middle" scope="col">EN STOCK</th>
-                        <th class="text-center align-middle" scope="col">OTROS DESTINOS</th>
+                        <th class="text-center align-middle" scope="col" title="REMITOS a nombre de otros clientes, con mercadería ingresada por {{dataCliente.cliente}}. Descontando las DEVOLUCIONES de REMITOS">OTROS DESTINOS</th>
                     </tr>
                 </thead>
                 <tbody>
